Added the IMessageProducer service as DI; Added CanExecute with mvvm-light;

--- a/Engine/MainWindow.xaml
+++ b/Engine/MainWindow.xaml
@@ -13,6 +13,7 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Label FontSize="40" Content="{Binding Message, FallbackValue=Message}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Button Content="Send" Width="70" Height="40" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Command="{Binding SendCommand}"/>
+        <TextBox Grid.Row="1" VerticalAlignment="Top" Height="30" Text="{Binding Text, UpdateSourceTrigger=PropertyChanged}" Width="100"/>
+        <Button Content="Send" Width="70" Height="30" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Command="{Binding SendCommand}"/>
     </Grid>
 </Window>
